--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
         <link rel="stylesheet" type="text/css"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="main.css" />
+        <script src="main.js"></script>
         <title>My Todo List</title>
     </head>
     <body>
