Completed the todo app

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
                 class="form-control" placeholder="Enter a todo..." />
             </form>
             <br />
-            <button class="btn btn-primary btn-md">Submit!</button>
+            <button id="btn-click" class="btn btn-primary btn-md">
+                Submit!
+            </button>
+            <br />
+            <br />
+            <h2>Todos</h2>
+            <h3>
+                <ol class="results"></ol>
+            </h3>
         </div>
     </body>
 </html>
